# ipsw_parser

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql.yml  python-app.yml  python-publish.yml
ipsw_parser/: __main__.py  archive.py  build_identity.py  build_manifest.py  component.py  dsc.py  exceptions.py  firmware.py  img4.py  ipsw.py
tests/: test_archive_backends.py
